# california-housing-mlflow

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: features_analysis.py  monitoring_drift.py  registry.py  train.py
src/api/: app.py  model.py  schemas.py
src/streamlite_app/: app.py
tests/: test_train.py
